# study-coding

./: .gitignore  README.md  resume.md
.github/workflows/: checking.yml  pipelines.yml
ansible/bern-vm/: ansible.cfg  inventory.ini
ansible/bern-vm/initial-setup/: ansible.cfg  init.yml  inventory.ini
ansible/bern-vm/tests/: requirements.yml
ansible/bern/useless/: ansible__clean.cfg.gen
ansible/bern/v1/: db.yml
ansible/bern/v2/: Makefile  README.md  ansible.cfg  full.yml  init-only.yml  mariadb-only.yml
ansible/idioms/async/: inventory.ini  sleep-poll-0-wait-for-async-status.yml  sleep-poll-0.yml  sleep-poll-not-0.yml
ansible/idioms/catch_error/: catch-error-ex1.yml  catch-error-ex2.yml  catch-error-ex3.yml  del-user-uninstall-curl.yml
ansible/idioms/rollback/: add-user-install-curl.yml  del-user-uninstall-curl.yml
bash/exercism/acronym/: acronym.sh
bash/exercism/atbash-cipher/: atbash_cipher.sh
bash/exercism/error-handling/: error_handling.sh
bash/exercism/hamming/: hamming.sh
bash/exercism/luhn/: luhn.sh
bash/exercism/poker/: poker.sh
bash/own/: README.md
cpp/: .gitignore
cpp/cmake/tutorial/Step2/Step2_Task2/: CMakeLists.txt  tutorial.cxx
cpp/cmake/tutorial/Step2/Step2_Task2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  mysqrt.cxx
cpp/cmake/tutorial/Step3/: CMakeLists.txt
cpp/cmake/tutorial/Step3/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
cpp/cmake/tutorial/Step4/: CMakeLists.txt  tutorial.cxx
cpp/cmake/tutorial/Step5/: CMakeLists.txt  README.md
cpp/cmake/tutorial/Step5/MathFunctions/: CMakeLists.txt
cpp/own/: .clang-format
cpp/own/boost/program_options/: CMakeLists.txt  main.cpp
cpp/own/idioms/declaration/struct_difference/: CMakeLists.txt  README.md  header.h  src1.cc  src2.cc
dart/const/: const_construct.dart
dart/git_push/: README.md  pubspec.yaml
dart/idioms/: await_for.dart  cascade_notation.dart  const_construct_wrong.dart  datetime.dart  extension_for_string.dart  list_operations.dart  list_set_map.dart  set_implementations.dart
flutter/: .gitignore
flutter/CurrencyCalc/: pubspec.yaml
flutter/currency_calc/: .gitignore  README.md  pubspec.yaml
flutter/hive1/: pubspec.yaml
go/own/task-manager/services/parcel_locker/: .gitignore  Cargo.toml  Makefile
go/own/task-manager/services/parcel_locker/config/: log4rs.yaml
go/own/task-manager/services/parcel_locker/deploy/docker/: docker-compose.yaml  env
go/own/task-manager/services/parcel_locker/deploy/docker/app/: Dockerfile
go/own/task-manager/services/parcel_locker/deploy/docker/redis-populator/: data.txt
go/own/task-manager/services/parcel_locker/deploy/docker/redis-storage/: redis.conf
go/own/task-manager/services/parcel_locker/src/: main.rs
go/own/task-manager/services/parcel_locker/src/app/: mod.rs
go/own/task-manager/services/parcel_locker/src/app/rest/: mod.rs
go/own/task-manager/services/parcel_locker/src/app/rest/action/: deletion.rs  finding.rs  health.rs  loading.rs  mod.rs  saving.rs
go/own/task-manager/services/parcel_locker/src/app/rest/action/test/: loading_tests.rs
go/own/task-manager/services/parcel_locker/src/app/rest/rejection/: app_errors.rs  errors.rs  handler.rs  mod.rs
go/own/task-manager/services/parcel_locker/src/app/rest/request/: mod.rs  param_extractor.rs
go/own/task-manager/services/parcel_locker/src/app/rest/route/: routing.rs
go/own/task-manager/services/parcel_locker/src/controller/: mod.rs
go/own/task-manager/services/parcel_locker/src/controller/action/: deletion.rs  health.rs  loading.rs  mod.rs  saving.rs
go/own/task-manager/services/parcel_locker/src/controller/rejection/: errors.rs  handler.rs  mod.rs
go/own/task-manager/services/parcel_locker/src/controller/route/: routing.rs
go/own/task-manager/services/parcel_locker/src/domain/: model.rs  repository.rs
go/own/task-manager/services/parcel_locker/src/domain/model/: mod.rs  parcel_locker.rs
go/own/task-manager/services/parcel_locker/src/infra/: mod.rs  tracing.rs
go/own/task-manager/services/parcel_locker/src/infra/storage/: common.rs  deleter.rs  finder.rs  loader.rs  mod.rs  saver.rs
go/own/task-manager/services/parcel_locker/src/infra/trace/: tracing.rs
go/own/task-manager/services/parcel_locker/src/model/: mod.rs  parcel_locker.rs
go/own/task-manager/services/parcel_locker/src/storage/: common.rs  deleter.rs  loader.rs  mod.rs  saver.rs
go/own/task-manager/services/parcel_locker/test/: parcel_locker.hurl
go/spoj.com/: README.md
html/accessibility/: visually_hidden.html
html/basic_tag/: dl.html  figure.html
html/css_directive/: css_apply.html
html/css_position/: css-position.html
html/svg/: README.md  example1.html  example2.html  example3.html  example4.html  example5.html  example6.html  example7.html
javascript/leetcode.com/: 0001_two_sum.js  README.md
k8s/cronjob/: Makefile  time-file-cronjob.yaml
k8s/healthprobe/: healthprobe-http.yaml
k8s/healthprobe-for-app/: Makefile  README.md
k8s/nfs-pv/: README.md  k_get_all.txt  pod.yaml  pv.yaml  pvc.yaml  values.yaml
k8s/pdb/: README.md  deployment.yaml  pdb.yaml
k8s/sidecar/: README.md  deployment-sidecar-and-init.yaml
k8s/space-station/: Makefile
k8s/svc-ex1/: ex1.yaml  multi.yaml
php/benchmarks/: url-parsing.php
php/revoltphp/: composer.json
reactjs/own/: package-lock.json
rust/: .gitignore
rust/exercism/: README.md
rust/own/calc/: Cargo.toml
rust/own/calc/config/: log4rs.yaml
rust/own/calc/src/: main.rs
rust/own/calc/test/: test_sum.http  test_sum.hurl
rust/own/misc/: Cargo.toml  borrow.rs  borrow2.rs  clean.bat  deref.rs  double_linked_list.md  double_linked_list.rs  float.rs  iterator1.rs  lifetimes.rs  loop.rs  my_box.rs  num_overflow.rs  persistent_stack.rs  rc1.rs  reqwest.rs  single_linked_list.rs  single_linked_list2.rs  smartptr1.rs  stack1.rs  str_types.rs  string1.rs  thread1.rs  trait1.rs  trait2.rs
rust/rust_web_dev_book/: Cargo.toml
scala/: .gitignore
terraform/: .gitignore  README.md
terraform/cairo/: README.md  init.tf
terraform/canberra/: .ansible.cfg  inventory.ini  main.tf
(+1224 files in other folders)
