[package]
name = "calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
log4rs = "1.3.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["v4"] }
warp = "0.3.7"
