[package]
name = "guess_game"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "some_name"
# path = "str_types.rs"
# path = "num_overflow.rs"
# path = "float.rs"
# path = "double_linked_list.rs"
# path = "smartptr1.rs"
# path = "thread1.rs"
# path = "my_box.rs"
path = "single_linked_list2.rs"
# path = "iterator1.rs"
# path = "rc1.rs"