[package]
name = "parcel_locker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
warp = "0.3.7"
serde = { version = "1.0.203", features = ["derive"] }
redis = "0.25.4"
log4rs = "1.3.0"
log = "0.4.22"
uuid = { version = "1.9.1", features = ["v4"] }
